<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/material_text_subhead"
        android:text="@string/rate_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sheet_kantor"
        android:layout_width="183dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sheet_button"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_create_24px"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/create_own_"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintStart_toEndOf="@+id/btn_sheet_download_visa"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_sheet_download_visa"
        android:layout_width="148dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sheet_button"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_payment_24px"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/download_visa"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>